<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Sender">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <Button
                android:id="@+id/simple_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/send" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:layout_gravity="center_vertical"
                android:textSize="24sp"
                android:text="@string/simple_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <Button
                android:id="@+id/quoted"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/send" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:layout_gravity="center_vertical"
                android:textSize="24sp"
                android:text="@string/quoted" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <Button
                android:id="@+id/structured"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/send" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:layout_gravity="center_vertical"
                android:textSize="24sp"
                android:text="@string/structured" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <Button
                android:id="@+id/bad_immediate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/send" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:layout_gravity="center_vertical"
                android:textSize="24sp"
                android:text="@string/bad_immediate" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <Button
                android:id="@+id/good_immediate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/send" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:layout_gravity="center_vertical"
                android:textSize="24sp"
                android:text="@string/good_immediate" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <Button
                android:id="@+id/bad_typed_asset"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/send" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:layout_gravity="center_vertical"
                android:textSize="24sp"
                android:text="@string/bad_typed_asset" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <Button
                android:id="@+id/good_typed_asset"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/send" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:layout_gravity="center_vertical"
                android:textSize="24sp"
                android:text="@string/good_typed_asset" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <Button
                android:id="@+id/bad_asset"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/send" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:layout_gravity="center_vertical"
                android:textSize="24sp"
                android:text="@string/bad_asset" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <Button
                android:id="@+id/good_asset"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/send" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:layout_gravity="center_vertical"
                android:textSize="24sp"
                android:text="@string/good_asset" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <Button
                android:id="@+id/bad_file"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/send" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:layout_gravity="center_vertical"
                android:textSize="24sp"
                android:text="@string/bad_file" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <Button
                android:id="@+id/good_file"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/send" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:layout_gravity="center_vertical"
                android:textSize="24sp"
                android:text="@string/good_file" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <Button
                android:id="@+id/bad_file_ref"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/send" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:layout_gravity="center_vertical"
                android:textSize="24sp"
                android:text="@string/bad_file_ref" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <Button
                android:id="@+id/good_file_ref"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/send" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:layout_gravity="center_vertical"
                android:textSize="24sp"
                android:text="@string/good_file_ref" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
